2.8: Deleting a scene uses freed memory #51877

Closed
opened 2017-06-23 09:54:15 +02:00 by Campbell Barton · 5 comments

Remove scene on the following file causes a crash (using asan).

delete_scene_crash.blend

==6399==ERROR: AddressSanitizer: heap-use-after-free on address 0x603000124f68 at pc 0x0000034be4db bp 0x7ffd0b34e450 sp 0x7ffd0b34e440
READ of size 8 at 0x603000124f68 thread T0
    - 0 0x34be4da in BKE_scene_objects_iterator_next /src/blender/source/blender/blenkernel/intern/collection.c:611
    - 1 0x37d78e0 in libblock_remap_data_preprocess /src/blender/source/blender/blenkernel/intern/library_remap.c:299
    - 2 0x37d8f3a in libblock_remap_data /src/blender/source/blender/blenkernel/intern/library_remap.c:469
    - 3 0x37da905 in BKE_libblock_relink_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:673
    - 4 0x37db6a8 in BKE_libblock_free_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:899
    - 5 0x37db7fc in BKE_libblock_free /src/blender/source/blender/blenkernel/intern/library_remap.c:927
    - 6 0x1e72a93 in ED_scene_delete /src/blender/source/blender/editors/scene/scene_edit.c:107
    - 7 0x1e736bf in scene_delete_exec /src/blender/source/blender/editors/scene/scene_edit.c:237
    - 8 0x971709 in wm_operator_invoke /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1154
    - 9 0x972a94 in wm_operator_call_internal /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1339
    - 10 0x972d36 in WM_operator_name_call_ptr /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1387
    - 11 0x167b3f5 in ui_apply_but_funcs_after /src/blender/source/blender/editors/interface/interface_handlers.c:796
    - 12 0x16e7fbe in ui_handler_region_menu /src/blender/source/blender/editors/interface/interface_handlers.c:10099
    - 13 0x96afb1 in wm_handler_ui_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:480
    - 14 0x97940d in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2106
    - 15 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255
    - 16 0x97cd4c in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2539
    - 17 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506
    - 18 0x940d60 in main /src/blender/source/creator/creator.c:526
    - 19 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439)
    #20 0x93ff39 in _start (/src/cmake_debug/bin/blender+0x93ff39)

0x603000124f68 is located 8 bytes inside of 32-byte region [0x603000124f60,0x603000124f80)
freed by thread T0 here:
    - 0 0x7f4dbbe694c8 in __interceptor_free /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:45
    - 1 0x49e81dc in MEM_lockfree_freeN /src/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:169
    - 2 0x34bc3a7 in BKE_collection_object_remove /src/blender/source/blender/blenkernel/intern/collection.c:284
    - 3 0x34bc5a7 in BKE_collections_object_remove /src/blender/source/blender/blenkernel/intern/collection.c:315
    - 4 0x37d744b in libblock_remap_data_preprocess_scene_object_unlink /src/blender/source/blender/blenkernel/intern/library_remap.c:278
    - 5 0x37d78d4 in libblock_remap_data_preprocess /src/blender/source/blender/blenkernel/intern/library_remap.c:301
    - 6 0x37d8f3a in libblock_remap_data /src/blender/source/blender/blenkernel/intern/library_remap.c:469
    - 7 0x37da905 in BKE_libblock_relink_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:673
    - 8 0x37db6a8 in BKE_libblock_free_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:899
    - 9 0x37db7fc in BKE_libblock_free /src/blender/source/blender/blenkernel/intern/library_remap.c:927
    - 10 0x1e72a93 in ED_scene_delete /src/blender/source/blender/editors/scene/scene_edit.c:107
    - 11 0x1e736bf in scene_delete_exec /src/blender/source/blender/editors/scene/scene_edit.c:237
    - 12 0x971709 in wm_operator_invoke /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1154
    - 13 0x972a94 in wm_operator_call_internal /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1339
    - 14 0x972d36 in WM_operator_name_call_ptr /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1387
    - 15 0x167b3f5 in ui_apply_but_funcs_after /src/blender/source/blender/editors/interface/interface_handlers.c:796
    - 16 0x16e7fbe in ui_handler_region_menu /src/blender/source/blender/editors/interface/interface_handlers.c:10099
    - 17 0x96afb1 in wm_handler_ui_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:480
    - 18 0x97940d in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2106
    - 19 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255
    - 20 0x97cd4c in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2539
    - 21 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506
    - 22 0x940d60 in main /src/blender/source/creator/creator.c:526
    - 23 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439)

previously allocated by thread T0 here:
    - 0 0x7f4dbbe69860 in __interceptor_malloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:62
    - 1 0x49e8aad in MEM_lockfree_mallocN /src/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:307
    - 2 0x319786b in read_struct /src/blender/source/blender/blenloader/intern/readfile.c:1903
    - 3 0x31f72aa in read_data_into_oldnewmap /src/blender/source/blender/blenloader/intern/readfile.c:8318
    - 4 0x31f84e1 in read_libblock /src/blender/source/blender/blenloader/intern/readfile.c:8449
    - 5 0x31fcd64 in blo_read_file_internal /src/blender/source/blender/blenloader/intern/readfile.c:8899
    - 6 0x318479b in BLO_read_from_file /src/blender/source/blender/blenloader/intern/readblenentry.c:331
    - 7 0x3415d4c in BKE_blendfile_read /src/blender/source/blender/blenkernel/intern/blendfile.c:381
    - 8 0x98a50f in WM_file_read /src/blender/source/blender/windowmanager/intern/wm_files.c:569
    - 9 0x9923d2 in wm_file_read_opwrap /src/blender/source/blender/windowmanager/intern/wm_files.c:1704
    - 10 0x992a98 in wm_open_mainfile_exec /src/blender/source/blender/windowmanager/intern/wm_files.c:1763
    - 11 0x97722b in wm_handler_fileselect_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1901
    - 12 0x978398 in wm_handler_fileselect_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1988
    - 13 0x979529 in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2112
    - 14 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255
    - 15 0x97d5cb in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2632
    - 16 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506
    - 17 0x940d60 in main /src/blender/source/creator/creator.c:526
    #18 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439)

SUMMARY: AddressSanitizer: heap-use-after-free /src/blender/source/blender/blenkernel/intern/collection.c:611 in BKE_scene_objects_iterator_next
Shadow bytes around the buggy address:
  0x0c068001c990: fa fa 00 00 00 00 fa fa 00 00 00 00 fa fa 00 00
  0x0c068001c9a0: 00 00 fa fa 00 00 00 00 fa fa 00 00 00 00 fa fa
  0x0c068001c9b0: 00 00 00 00 fa fa 00 00 00 00 fa fa 00 00 00 fa
  0x0c068001c9c0: fa fa 00 00 04 fa fa fa fd fd fd fd fa fa fd fd
  0x0c068001c9d0: fd fd fa fa 00 00 00 fa fa fa 00 00 00 fa fa fa
=>0x0c068001c9e0: 00 00 00 00 fa fa fd fd fd fd fa fa fd[fd]fd fd
  0x0c068001c9f0: fa fa 00 00 00 00 fa fa fd fd fd fd fa fa fd fd
  0x0c068001ca00: fd fd fa fa 00 00 00 00 fa fa 00 00 00 fa fa fa
  0x0c068001ca10: 00 00 04 fa fa fa fd fd fd fd fa fa fd fd fd fd
  0x0c068001ca20: fa fa 00 00 00 fa fa fa 00 00 00 fa fa fa fd fd
  0x0c068001ca30: fd fa fa fa fd fd fd fa fa fa fd fd fd fa fa fa
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Container overflow:      fc
  Array cookie:            ac
  Intra object redzone:    bb
  ASan internal:           fe
  Left alloca redzone:     ca
  Right alloca redzone:    cb
==6399==ABORTING
Remove scene on the following file causes a crash (using asan). [delete_scene_crash.blend](https://archive.blender.org/developer/F639700/delete_scene_crash.blend) ``` ==6399==ERROR: AddressSanitizer: heap-use-after-free on address 0x603000124f68 at pc 0x0000034be4db bp 0x7ffd0b34e450 sp 0x7ffd0b34e440 READ of size 8 at 0x603000124f68 thread T0 - 0 0x34be4da in BKE_scene_objects_iterator_next /src/blender/source/blender/blenkernel/intern/collection.c:611 - 1 0x37d78e0 in libblock_remap_data_preprocess /src/blender/source/blender/blenkernel/intern/library_remap.c:299 - 2 0x37d8f3a in libblock_remap_data /src/blender/source/blender/blenkernel/intern/library_remap.c:469 - 3 0x37da905 in BKE_libblock_relink_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:673 - 4 0x37db6a8 in BKE_libblock_free_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:899 - 5 0x37db7fc in BKE_libblock_free /src/blender/source/blender/blenkernel/intern/library_remap.c:927 - 6 0x1e72a93 in ED_scene_delete /src/blender/source/blender/editors/scene/scene_edit.c:107 - 7 0x1e736bf in scene_delete_exec /src/blender/source/blender/editors/scene/scene_edit.c:237 - 8 0x971709 in wm_operator_invoke /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1154 - 9 0x972a94 in wm_operator_call_internal /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1339 - 10 0x972d36 in WM_operator_name_call_ptr /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1387 - 11 0x167b3f5 in ui_apply_but_funcs_after /src/blender/source/blender/editors/interface/interface_handlers.c:796 - 12 0x16e7fbe in ui_handler_region_menu /src/blender/source/blender/editors/interface/interface_handlers.c:10099 - 13 0x96afb1 in wm_handler_ui_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:480 - 14 0x97940d in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2106 - 15 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255 - 16 0x97cd4c in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2539 - 17 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506 - 18 0x940d60 in main /src/blender/source/creator/creator.c:526 - 19 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439) #20 0x93ff39 in _start (/src/cmake_debug/bin/blender+0x93ff39) 0x603000124f68 is located 8 bytes inside of 32-byte region [0x603000124f60,0x603000124f80) freed by thread T0 here: - 0 0x7f4dbbe694c8 in __interceptor_free /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:45 - 1 0x49e81dc in MEM_lockfree_freeN /src/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:169 - 2 0x34bc3a7 in BKE_collection_object_remove /src/blender/source/blender/blenkernel/intern/collection.c:284 - 3 0x34bc5a7 in BKE_collections_object_remove /src/blender/source/blender/blenkernel/intern/collection.c:315 - 4 0x37d744b in libblock_remap_data_preprocess_scene_object_unlink /src/blender/source/blender/blenkernel/intern/library_remap.c:278 - 5 0x37d78d4 in libblock_remap_data_preprocess /src/blender/source/blender/blenkernel/intern/library_remap.c:301 - 6 0x37d8f3a in libblock_remap_data /src/blender/source/blender/blenkernel/intern/library_remap.c:469 - 7 0x37da905 in BKE_libblock_relink_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:673 - 8 0x37db6a8 in BKE_libblock_free_ex /src/blender/source/blender/blenkernel/intern/library_remap.c:899 - 9 0x37db7fc in BKE_libblock_free /src/blender/source/blender/blenkernel/intern/library_remap.c:927 - 10 0x1e72a93 in ED_scene_delete /src/blender/source/blender/editors/scene/scene_edit.c:107 - 11 0x1e736bf in scene_delete_exec /src/blender/source/blender/editors/scene/scene_edit.c:237 - 12 0x971709 in wm_operator_invoke /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1154 - 13 0x972a94 in wm_operator_call_internal /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1339 - 14 0x972d36 in WM_operator_name_call_ptr /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1387 - 15 0x167b3f5 in ui_apply_but_funcs_after /src/blender/source/blender/editors/interface/interface_handlers.c:796 - 16 0x16e7fbe in ui_handler_region_menu /src/blender/source/blender/editors/interface/interface_handlers.c:10099 - 17 0x96afb1 in wm_handler_ui_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:480 - 18 0x97940d in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2106 - 19 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255 - 20 0x97cd4c in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2539 - 21 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506 - 22 0x940d60 in main /src/blender/source/creator/creator.c:526 - 23 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439) previously allocated by thread T0 here: - 0 0x7f4dbbe69860 in __interceptor_malloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cc:62 - 1 0x49e8aad in MEM_lockfree_mallocN /src/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:307 - 2 0x319786b in read_struct /src/blender/source/blender/blenloader/intern/readfile.c:1903 - 3 0x31f72aa in read_data_into_oldnewmap /src/blender/source/blender/blenloader/intern/readfile.c:8318 - 4 0x31f84e1 in read_libblock /src/blender/source/blender/blenloader/intern/readfile.c:8449 - 5 0x31fcd64 in blo_read_file_internal /src/blender/source/blender/blenloader/intern/readfile.c:8899 - 6 0x318479b in BLO_read_from_file /src/blender/source/blender/blenloader/intern/readblenentry.c:331 - 7 0x3415d4c in BKE_blendfile_read /src/blender/source/blender/blenkernel/intern/blendfile.c:381 - 8 0x98a50f in WM_file_read /src/blender/source/blender/windowmanager/intern/wm_files.c:569 - 9 0x9923d2 in wm_file_read_opwrap /src/blender/source/blender/windowmanager/intern/wm_files.c:1704 - 10 0x992a98 in wm_open_mainfile_exec /src/blender/source/blender/windowmanager/intern/wm_files.c:1763 - 11 0x97722b in wm_handler_fileselect_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1901 - 12 0x978398 in wm_handler_fileselect_call /src/blender/source/blender/windowmanager/intern/wm_event_system.c:1988 - 13 0x979529 in wm_handlers_do_intern /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2112 - 14 0x97a88c in wm_handlers_do /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2255 - 15 0x97d5cb in wm_event_do_handlers /src/blender/source/blender/windowmanager/intern/wm_event_system.c:2632 - 16 0x94d995 in WM_main /src/blender/source/blender/windowmanager/intern/wm.c:506 - 17 0x940d60 in main /src/blender/source/creator/creator.c:526 #18 0x7f4db8cf3439 in __libc_start_main (/usr/lib/libc.so.6+0x20439) SUMMARY: AddressSanitizer: heap-use-after-free /src/blender/source/blender/blenkernel/intern/collection.c:611 in BKE_scene_objects_iterator_next Shadow bytes around the buggy address: 0x0c068001c990: fa fa 00 00 00 00 fa fa 00 00 00 00 fa fa 00 00 0x0c068001c9a0: 00 00 fa fa 00 00 00 00 fa fa 00 00 00 00 fa fa 0x0c068001c9b0: 00 00 00 00 fa fa 00 00 00 00 fa fa 00 00 00 fa 0x0c068001c9c0: fa fa 00 00 04 fa fa fa fd fd fd fd fa fa fd fd 0x0c068001c9d0: fd fd fa fa 00 00 00 fa fa fa 00 00 00 fa fa fa =>0x0c068001c9e0: 00 00 00 00 fa fa fd fd fd fd fa fa fd[fd]fd fd 0x0c068001c9f0: fa fa 00 00 00 00 fa fa fd fd fd fd fa fa fd fd 0x0c068001ca00: fd fd fa fa 00 00 00 00 fa fa 00 00 00 fa fa fa 0x0c068001ca10: 00 00 04 fa fa fa fd fd fd fd fa fa fd fd fd fd 0x0c068001ca20: fa fa 00 00 00 fa fa fa 00 00 00 fa fa fa fd fd 0x0c068001ca30: fd fa fa fa fd fd fd fa fa fa fd fd fd fa fa fa Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb ==6399==ABORTING ```
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Dalai Felinto self-assigned this 2017-06-30 16:52:03 +02:00

I can reproduce this with:

./blender --python-expr "import bpy;scene=bpy.context.scene;bpy.data.scenes.new('New');bpy.data.scenes.remove(scene)"

(only with ASAN, so it doesn't crash on release builds at least, but something else may break down the line)

I can reproduce this with: ``` ./blender --python-expr "import bpy;scene=bpy.context.scene;bpy.data.scenes.new('New');bpy.data.scenes.remove(scene)" ``` *(only with ASAN, so it doesn't crash on release builds at least, but something else may break down the line)*

This issue was referenced by 49a35033be

This issue was referenced by 49a35033be60e58ed4910346bc29ffa1954b34ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51877
No description provided.